# egks_checker

./: Dockerfile  Dockerfile.bot  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  start.py  start_tg_bot.py  start_update.py
api/repository/: repository.py
api/service/: service.py
api/utils/: get_data.py  in_text.py  text_to_json.py
migration/versions/: d291498be933_create_users_table.py
routes/: routes.py
routes/return_file/: egks.html
tg_bot/: egks_bot.py
tg_bot/utils/: update_and_send.py
