[tool.poetry]
name = "egks-cheker"
version = "0.1.0"
description = ""
authors = ["Laajf <krym4rtem@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
logging = "^0.4.9.6"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
